Backport remapper changes (#269)