@@ -7,16 +7,16 @@ import org.bukkit.configuration.file.YamlConfiguration;
 import org.objectweb.asm.tree.ClassNode;
 
 import java.io.File;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 public class ArclightPluginPatcher implements PluginTransformer {
 
@@ -38,31 +38,35 @@ public class ArclightPluginPatcher implements PluginTransformer {
         if (pluginFolder.exists()) {
             ArclightMod.LOGGER.info("patcher.loading");
             ArrayList<PluginTransformer> list = new ArrayList<>();
-            for (File file : pluginFolder.listFiles()) {
-                if (file.isFile() && file.getName().endsWith(".jar")) {
-                    loadFromJar(file.toPath()).ifPresent(list::add);
+            File[] files = pluginFolder.listFiles();
+            if (files != null) {
+                for (File file : files) {
+                    if (file.isFile() && file.getName().endsWith(".jar")) {
+                        loadFromJar(file).ifPresent(list::add);
+                    }
                 }
-            }
-            if (!list.isEmpty()) {
-                list.sort(Comparator.comparing(PluginTransformer::priority));
-                ArclightMod.LOGGER.info("patcher.loaded", list.size());
-                transformerList.add(new ArclightPluginPatcher(list));
+                if (!list.isEmpty()) {
+                    list.sort(Comparator.comparing(PluginTransformer::priority));
+                    ArclightMod.LOGGER.info("patcher.loaded", list.size());
+                    transformerList.add(new ArclightPluginPatcher(list));
+                }
             }
         }
     }
 
-    private static Optional<PluginTransformer> loadFromJar(Path path) {
-        try {
-            FileSystem fileSystem = FileSystems.newFileSystem(path, ArclightPluginPatcher.class.getClassLoader());
-            Path pluginYml = fileSystem.getPath("plugin.yml");
-            if (Files.exists(pluginYml)) {
-                YamlConfiguration configuration = YamlConfiguration.loadConfiguration(Files.newBufferedReader(pluginYml));
-                String name = configuration.getString("arclight.patcher");
-                if (name != null) {
-                    URLClassLoader loader = new URLClassLoader(new URL[]{path.toUri().toURL()}, ArclightPluginPatcher.class.getClassLoader());
-                    Class<?> clazz = Class.forName(name, false, loader);
-                    PluginTransformer transformer = clazz.asSubclass(PluginTransformer.class).newInstance();
-                    return Optional.of(transformer);
+    private static Optional<PluginTransformer> loadFromJar(File file) {
+        try (JarFile jarFile = new JarFile(file)) {
+            JarEntry jarEntry = jarFile.getJarEntry("plugin.yml");
+            if (jarEntry != null) {
+                try (InputStream stream = jarFile.getInputStream(jarEntry)) {
+                    YamlConfiguration configuration = YamlConfiguration.loadConfiguration(new InputStreamReader(stream));
+                    String name = configuration.getString("arclight.patcher");
+                    if (name != null) {
+                        URLClassLoader loader = new URLClassLoader(new URL[]{file.toURI().toURL()}, ArclightPluginPatcher.class.getClassLoader());
+                        Class<?> clazz = Class.forName(name, false, loader);
+                        PluginTransformer patcher = clazz.asSubclass(PluginTransformer.class).getConstructor().newInstance();
+                        return Optional.of(patcher);
+                    }
                 }
             }
         } catch (Throwable e) {
